--- a/Jama/src/main/webapp/resources/sections/installmentWizData.xhtml
+++ b/Jama/src/main/webapp/resources/sections/installmentWizData.xhtml
@@ -1,5 +1,9 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core" xmlns:p="http://primefaces.org/ui" xmlns:composite="http://java.sun.com/jsf/composite">
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:composite="http://java.sun.com/jsf/composite">
 
 <composite:interface>
 	<composite:attribute name="editingDisable" default="false" />
@@ -16,16 +20,18 @@
 				<p:column>
 					<h:outputText value="#{msgs.newInstDate}:" />
 				</p:column>
-				<p:column>
-					<p:calendar id="date" pattern="dd/MM/yyyy" readonlyInput="true" showOn="both" showOtherMonths="true" required="true"
-						value="#{installmentManager.installment.date}" rendered="#{cc.attrs.editingDisable == false}" navigator="true"
+				<p:column rendered="#{cc.attrs.editingDisable == false}">
+					<p:calendar id="date" pattern="dd/MM/yyyy" readonlyInput="true"
+						showOn="both" showOtherMonths="true" required="true"
+						value="#{installmentManager.installment.date}" navigator="true"
 						validator="#{instDataPB.validateDeadlineDate}">
 						<f:convertDateTime type="date" pattern="dd/MM/yyyy" />
 					</p:calendar>
 				</p:column>
 
-				<p:column>
-					<h:outputText id="date_o" value="#{installmentManager.installment.date}" rendered="#{cc.attrs.editingDisable == true}">
+				<p:column rendered="#{cc.attrs.editingDisable == true}">
+					<h:outputText id="date_o"
+						value="#{installmentManager.installment.date} ">
 						<f:convertDateTime type="date" pattern="dd/MM/yyyy" />
 					</h:outputText>
 				</p:column>
@@ -39,43 +45,47 @@
 
 					<h:outputText value="#{msgs.amount}:" />
 				</p:column>
-				<p:column>
 
-					<h:inputText id="taxableAmount" value="#{installmentManager.installment.wholeTaxableAmount}" label="#{msgs.amount}" required="true"
-						rendered="#{cc.attrs.editingDisable == false}">
+				<p:column rendered="#{cc.attrs.editingDisable == false}">
+
+					<h:inputText id="taxableAmount"
+						value="#{installmentManager.installment.wholeTaxableAmount}"
+						label="#{msgs.amount}" required="true">
 						<f:validator binding="#{moneyValidator}" />
 						<f:ajax execute="@this" render="amount taxAmountError" />
 					</h:inputText>
 				</p:column>
-				<p:column>
+				<p:column rendered="#{cc.attrs.editingDisable == true}">
 
-					<h:outputText id="taxableAmount_o" value="#{installmentManager.installment.wholeTaxableAmount}" rendered="#{cc.attrs.editingDisable == true}">
+					<h:outputText id="taxableAmount_o"
+						value="#{installmentManager.installment.wholeTaxableAmount}">
 						<f:attribute name="plain" value="false" />
 					</h:outputText>
 				</p:column>
 
 				<p:column>
 
-					<p:message id="taxAmountError" styleClass="errorMessage" for="taxableAmount" />
+					<p:message id="taxAmountError" styleClass="errorMessage"
+						for="taxableAmount" />
 				</p:column>
 
 			</p:row>
 
-			<p:row>
+			<p:row rendered="#{agreementWizardPB.renderIvaComponents()==true}">
 				<p:column>
-					<h:outputText value="#{msgs.newInstIva}:"
-						rendered="#{agreementWizardPB.renderIvaComponents()==true and agreementWizardPB.renderIvaComponents()==true}" />
+					<h:outputText value="#{msgs.newInstIva}:" />
 				</p:column>
-				<p:column>
-					<h:inputText id="iva" value="#{installmentManager.installment.IVA_amount}" label="#{msgs.newInstIva}" required="true"
-						rendered="#{cc.attrs.editingDisable == false and agreementWizardPB.renderIvaComponents()==true}">
+				<p:column rendered="#{cc.attrs.editingDisable == false}">
+					<h:inputText id="iva"
+						value="#{installmentManager.installment.IVA_amount}"
+						label="#{msgs.newInstIva}" required="true">
 						<f:validator binding="#{percentValidator}" />
 						<f:ajax execute="@this" render="amount ivaError" />
 					</h:inputText>
 				</p:column>
-				<p:column>
-					<h:outputText id="iva_o" value="#{installmentManager.installment.IVA_amount}"
-						rendered="#{cc.attrs.editingDisable == true and agreementWizardPB.renderIvaComponents()==true}" />
+				<p:column rendered="#{cc.attrs.editingDisable == true}">
+					<h:outputText id="iva_o"
+						value="#{installmentManager.installment.IVA_amount}" />
 				</p:column>
 				<p:column>
 					<p:message id="ivaError" styleClass="errorMessage" for="iva" />
@@ -87,7 +97,9 @@
 					<h:outputText value="#{msgs.wholeAmount}:" />
 				</p:column>
 				<p:column>
-					<h:outputText id="amount" value="#{installmentManager.installment.wholeAmount}" readonly="true">
+					<h:outputText id="amount"
+						value="#{installmentManager.installment.wholeAmount}"
+						readonly="true">
 						<f:attribute name="plain" value="false" />
 
 					</h:outputText>
@@ -102,13 +114,15 @@
 				<p:column>
 					<h:outputText value="#{msgs.newInstVoucherNumber}:" />
 				</p:column>
-				<p:column>
-					<h:inputText id="voucherNumber" value="#{installmentManager.installment.voucherNumber}" label="#{msgs.newInstVoucherNumber}" required="true"
-						rendered="#{cc.attrs.editingDisable == false}" />
+				<p:column rendered="#{cc.attrs.editingDisable == false}">
+					<h:inputText id="voucherNumber"
+						value="#{installmentManager.installment.voucherNumber}"
+						label="#{msgs.newInstVoucherNumber}" required="true" />
 				</p:column>
 
-				<p:column>
-					<h:outputText id="voucherNumber_o" value="#{installmentManager.installment.voucherNumber}" rendered="#{cc.attrs.editingDisable == true}" />
+				<p:column rendered="#{cc.attrs.editingDisable == true}">
+					<h:outputText id="voucherNumber_o"
+						value="#{installmentManager.installment.voucherNumber}" />
 				</p:column>
 
 				<p:column>
@@ -120,15 +134,20 @@
 				<p:column>
 					<h:outputText value="#{msgs.newInstVoucherDate}:" />
 				</p:column>
-				<p:column>
-					<p:calendar id="voucherDate" pattern="dd/MM/yyyy" readonlyInput="true" showOn="both" showOtherMonths="true" required="true"
-						value="#{installmentManager.installment.voucherDate}" rendered="#{cc.attrs.editingDisable == false}" navigator="true">
+				<p:column rendered="#{cc.attrs.editingDisable == false}">
+					<p:calendar id="voucherDate" pattern="dd/MM/yyyy"
+						readonlyInput="true" showOn="both" showOtherMonths="true"
+						required="true"
+						value="#{installmentManager.installment.voucherDate}"
+						navigator="true">
 						<f:convertDateTime type="date" pattern="dd/MM/yyyy" />
 					</p:calendar>
 				</p:column>
 
-				<p:column>
-					<h:outputText id="voucherDate_o" value="#{installmentManager.installment.voucherDate}" rendered="#{cc.attrs.editingDisable == true}">
+				<p:column rendered="#{cc.attrs.editingDisable == true}">
+					<h:outputText id="voucherDate_o"
+						value="#{installmentManager.installment.voucherDate}"
+						>
 						<f:convertDateTime type="date" pattern="dd/MM/yyyy" />
 					</h:outputText>
 				</p:column>
@@ -138,20 +157,23 @@
 				</p:column>
 			</p:row>
 
-			<p:row>
+			<p:row rendered="agreementWizardPB.renderIvaComponents()==true">
 				<p:column>
 					<h:outputText value="#{msgs.newInstIvaVoucherNumber}:"
-						rendered="agreementWizardPB.renderIvaComponents()==true and agreementWizardPB.renderIvaComponents()==true" />
+						 />
 				</p:column>
-				<p:column>
-					<h:inputText id="ivaVoucherNumber" value="#{installmentManager.installment.ivaVoucherNumber}" label="#{msgs.newInstVoucherNumber}"
-						required="true" rendered="#{cc.attrs.editingDisable == false and agreementWizardPB.renderIvaComponents()==true}">
+				<p:column rendered="#{cc.attrs.editingDisable == false}">
+					<h:inputText id="ivaVoucherNumber"
+						value="#{installmentManager.installment.ivaVoucherNumber}"
+						label="#{msgs.newInstVoucherNumber}" required="true"
+						>
 					</h:inputText>
 				</p:column>
 
-				<p:column>
-					<h:outputText id="ivaVoucherNumber_o" value="#{installmentManager.installment.ivaVoucherNumber}"
-						rendered="#{cc.attrs.editingDisable == true and agreementWizardPB.renderIvaComponents()==true}" />
+				<p:column rendered="#{cc.attrs.editingDisable == true }" >
+					<h:outputText id="ivaVoucherNumber_o"
+						value="#{installmentManager.installment.ivaVoucherNumber}"
+						/>
 				</p:column>
 
 				<p:column>
@@ -164,13 +186,17 @@
 				<p:column>
 					<h:outputText value="#{msgs.newInstPendingNumber}:" />
 				</p:column>
-				<p:column>
-					<h:inputText id="pendingNumber" value="#{installmentManager.installment.pendingNumber}" label="#{msgs.newInstPendingNumber}" required="true"
-						rendered="#{cc.attrs.editingDisable == false}" />
+				<p:column rendered="#{cc.attrs.editingDisable == false}">
+					<h:inputText id="pendingNumber"
+						value="#{installmentManager.installment.pendingNumber}"
+						label="#{msgs.newInstPendingNumber}" required="true"
+						 />
 				</p:column>
 
-				<p:column>
-					<h:outputText id="pendingNumber_o" value="#{installmentManager.installment.pendingNumber}" rendered="#{cc.attrs.editingDisable == true}" />
+				<p:column rendered="#{cc.attrs.editingDisable == true}">
+					<h:outputText id="pendingNumber_o"
+						value="#{installmentManager.installment.pendingNumber}"
+						 />
 				</p:column>
 				<p:column>
 					<p:message for="pendingNumber" />
@@ -180,13 +206,17 @@
 				<p:column>
 					<h:outputText value="#{msgs.newInstInvoiceNumber}:" />
 				</p:column>
-				<p:column>
-					<h:inputText id="invoiceNumber" value="#{installmentManager.installment.invoiceNumber}" label="#{msgs.newInstInvoiceNumber}" required="true"
-						rendered="#{cc.attrs.editingDisable == false}" />
+				<p:column rendered="#{cc.attrs.editingDisable == false}">
+					<h:inputText id="invoiceNumber"
+						value="#{installmentManager.installment.invoiceNumber}"
+						label="#{msgs.newInstInvoiceNumber}" required="true"
+						 />
 				</p:column>
 
-				<p:column>
-					<h:outputText id="invoiceNumber_o" value="#{installmentManager.installment.invoiceNumber}" rendered="#{cc.attrs.editingDisable == true}" />
+				<p:column rendered="#{cc.attrs.editingDisable == true}">
+					<h:outputText id="invoiceNumber_o"
+						value="#{installmentManager.installment.invoiceNumber}"
+						 />
 				</p:column>
 				<p:column>
 					<p:message for="invoiceNumber" />
@@ -197,15 +227,20 @@
 				<p:column>
 					<h:outputText value="#{msgs.newInstInvoiceDate}:" />
 				</p:column>
-				<p:column>
-					<p:calendar id="invoiceDate" pattern="dd/MM/yyyy" readonlyInput="true" showOn="both" showOtherMonths="true" required="true"
-						value="#{installmentManager.installment.invoiceDate}" rendered="#{cc.attrs.editingDisable == false}" navigator="true">
+				<p:column rendered="#{cc.attrs.editingDisable == false}">
+					<p:calendar id="invoiceDate" pattern="dd/MM/yyyy"
+						readonlyInput="true" showOn="both" showOtherMonths="true"
+						required="true"
+						value="#{installmentManager.installment.invoiceDate}"
+						 navigator="true">
 						<f:convertDateTime type="date" pattern="dd/MM/yyyy" />
 					</p:calendar>
 				</p:column>
 
-				<p:column>
-					<h:outputText id="invoiceDate_o" value="#{installmentManager.installment.invoiceDate}" rendered="#{cc.attrs.editingDisable == true}">
+				<p:column rendered="#{cc.attrs.editingDisable == true}">
+					<h:outputText id="invoiceDate_o"
+						value="#{installmentManager.installment.invoiceDate}"
+						>
 						<f:convertDateTime type="date" pattern="dd/MM/yyyy" />
 					</h:outputText>
 				</p:column>
@@ -219,7 +254,9 @@
 					<h:outputText value="#{msgs.paidInvoice_Question}" />
 				</p:column>
 				<p:column>
-					<h:selectBooleanCheckbox id="paidInvoice" value="#{installmentManager.installment.paidInvoice}" disabled="#{cc.attrs.editingDisable == true}" />
+					<h:selectBooleanCheckbox id="paidInvoice"
+						value="#{installmentManager.installment.paidInvoice}"
+						disabled="#{cc.attrs.editingDisable == true}" />
 				</p:column>
 
 			</p:row>
@@ -229,8 +266,9 @@
 					<h:outputText value="#{msgs.reportRequired_Question}" />
 				</p:column>
 				<p:column>
-					<h:selectBooleanCheckbox value="#{installmentManager.installment.reportRequired}" id="reportRequired"
-						disabled="#{cc.attrs.editingDisable == true}" />
+					<h:selectBooleanCheckbox
+						value="#{installmentManager.installment.reportRequired}"
+						id="reportRequired" disabled="#{cc.attrs.editingDisable == true}" />
 				</p:column>
 
 			</p:row>
@@ -239,20 +277,25 @@
 				<p:column>
 					<h:outputText value="#{msgs.newInstNote}:" />
 				</p:column>
-				<p:column>
-					<h:inputTextarea id="notes" cols="20" rows="4" value="#{installmentManager.installment.note}" label="#{msgs.newInstNote}" required="false"
-						rendered="#{cc.attrs.editingDisable == false}" />
+				<p:column rendered="#{cc.attrs.editingDisable == false}">
+					<h:inputTextarea id="notes" cols="20" rows="4"
+						value="#{installmentManager.installment.note}"
+						label="#{msgs.newInstNote}" required="false"
+						 />
 				</p:column>
 
-				<p:column>
-					<h:outputText id="notes_o" value="#{installmentManager.installment.note}" rendered="#{cc.attrs.editingDisable == true}" />
+				<p:column rendered="#{cc.attrs.editingDisable == true}">
+					<h:outputText id="notes_o"
+						value="#{installmentManager.installment.note}"
+						 />
 				</p:column>
 				<p:column>
 					<p:message for="notes" />
 				</p:column>
 			</p:row>
 
-			<h:inputHidden value="needed" id="amountCheck" validator="#{instDataPB.validateAmount}" />
+			<h:inputHidden value="needed" id="amountCheck"
+				validator="#{instDataPB.validateAmount}" />
 			<p:message styleClass="errorMessage" for="amountCheck" />
 
 		</p:panelGrid>
