commit per conflict

--- a/Jama/src/main/webapp/resources/dialogs/companyDialog.xhtml
+++ b/Jama/src/main/webapp/resources/dialogs/companyDialog.xhtml
@@ -15,7 +15,7 @@
 
 				<h:outputText value="#{msgs.name}:" />
 				<h:inputText id="companyName" value="#{companyDialogPCB.company.name}" label="#{msgs.name}" required="true" />
-				<h:message for="companyName" />
+				<p:message for="companyName" />
 
 				<br />
 
