--- a/Jama/src/main/webapp/resources/sections/agreementWizShareTable.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWizShareTable.xhtml
@@ -152,7 +152,7 @@
 
 	<br />
 
-	<p:panel>
+	<p:panel rendered="#{agreementWizardPB.renderPersonnelQuotes()}">
 
 
 		<h:inputHidden value="needed" id="percentsCheck" validator="#{agrShareTablePB.validatePersonnelShares}" />
