--- a/Jama/src/main/webapp/resources/sections/installmentLastStep.xhtml
+++ b/Jama/src/main/webapp/resources/sections/installmentLastStep.xhtml
@@ -6,7 +6,7 @@
 	<p:tab id="tabEnd" title="#{msgs.end__tab}">
 
 
-		<p:panel>
+		<p:panel styleClass="semiEmptyPanel">
 			<h:outputText value="#{msgs.instCongr} " />
 
 
